--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,4 +3,5 @@ COPY ./requirements.txt /
 RUN pip install -r /requirements.txt
 
 COPY ./app.py /
-CMD ["flask", "run"]
+ENV FLASK_DEBUG=1
+CMD ["flask", "run", "--host=0.0.0.0", "--port=80", "--cert=adhoc"]
