--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,7 @@ FROM python
 COPY ./requirements.txt /
 RUN pip install -r /requirements.txt
 
-COPY ./app.py /
+COPY ./wsgi.py /
+COPY ./galgalim.py /
 ENV FLASK_DEBUG=1
-CMD ["flask", "run", "--host=0.0.0.0", "--port=80", "--cert=adhoc"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "wsgi:app"]
