got server starting inside docker

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,6 @@
 FROM alpine:latest
-RUN apk add --no-cache make gcc musl-dev
+RUN apk add --no-cache make cmake gcc musl-dev
 COPY src /
+RUN cmake .
 RUN make
-CMD /main
+CMD /galgalim
