--- a/app/src/CMakeLists.txt
+++ b/app/src/CMakeLists.txt
@@ -1,18 +1,8 @@
-cmake_minimum_required(VERSION 3.7)
-project (galgalim)
-
-SET(COMPILER_FLAGS "")
-SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ${COMPILER_FLAGS}")
-
-
-set(INCLUDE_DIR
-)
-
-include_directories(${INCLUDE_DIR})
+project (galgalim C)
 
 set(SOURCES
-        httpd.c
-        main.c
+    httpd.c
+    main.c
 )
 
 add_executable(galgalim ${SOURCES})
