string and array work

--- a/app/src/CMakeLists.txt
+++ b/app/src/CMakeLists.txt
@@ -1,8 +1,12 @@
+cmake_minimum_required(VERSION 3.21)
 project (galgalim C)
 
 set(SOURCES
     http.c
     main.c
+    string.c
+    array.c
 )
 
 add_executable(galgalim ${SOURCES})
+set_property(TARGET galgalim PROPERTY C_STANDARD 11)
