--- a/app/src/CMakeLists.txt
+++ b/app/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.21)
 project (galgalim C)
 
-add_compile_options(-Wall -Wextra -pedantic -Werror)
+# add_compile_options(-Wall -Wextra -pedantic -Werror)
 
 set(SOURCES
     main.c
@@ -13,5 +13,7 @@ set(SOURCES
     string.c
 )
 
+ADD_SUBDIRECTORY(hiredis)
 add_executable(galgalim ${SOURCES})
+TARGET_LINK_LIBRARIES(galgalim hiredis)
 set_property(TARGET galgalim PROPERTY C_STANDARD 23)
